--- a/src/main/resources/templates/create.html
+++ b/src/main/resources/templates/create.html
@@ -29,9 +29,9 @@
                     <input type="text" class="form-control mb-4 w-30" id="actions" name="actions"
                            placeholder="Hand tool operations" required>
                 </div>
-                <button type="button" class="btn btn-warning mb-3" onclick="addInput()">Add Action</button>
+                <button type="button" class="btn btn-outline-dark mb-3" onclick="addInput()">Add Action</button>
                 <br>
-                <button type="submit" class="btn btn-info col-2 mb-5 pb-2">Save Tool</button>
+                <button type="submit" class="btn btn-dark col-2 mb-5 pb-2">Save Tool</button>
             </form>
         </div>
         <script>
